# gameofthrones-df

./: .gitignore  README.md  armies.json  battles.json  dragons.json  habits.json  manifest.md  pyproject.toml  upgrade_system.json
analysis/: ARMY1_BATTLE_VALIDATION_2026-06-28-TILE-FOLLOWUP.md  ARMY1_BATTLE_VALIDATION_2026-06-28.md  ARMY1_TILE_CAPTURE_PRACTICAL_RULE_2026-06-28.md  ARMY1_TILE_CAPTURE_SUMMARY_2026-06-28.md  ARMY1_TILE_DEFENDER_CAPTURE_2026-06-28.md  ARRAX_ARMY_FIT_2026-06-26.md  BATTLE_REPORT_2026-06-27_LV2_DOCK_ROUND1.md  BATTLE_REPORT_2026-06-27_LV8_WOOD_STALEMATE.md  BATTLE_REPORT_2026-06-28_LV1_FIELD_PLAYER_STALEMATE.md  BATTLE_REPORT_2026-06-28_LV3_IRON_SHIELDBEARER_STALEMATE.md  BATTLE_REPORT_2026-06-28_OUTLAWS_L30_GOLD_STANDARD.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_AFFINITY_CORRECTIONS.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_ARRAX_VELAR_NYRENA_NOT_LOW_LOSS.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_ARRAX_VELAR_VHAGAR_LOCKED.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_CARAXES_VHAGAR_SYRAX_NOT_LOW_LOSS.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_SHADOWREND_SHIELDBEARERS.md  BATTLE_REPORT_2026-06-30_BLACK_GOAT_L35_TASHIX_VHAGAR_SYRAX_NOT_LOW_LOSS.md  CARAXES_AFFINITY_IMPACT_2026-06-27.md  CRIMSON_AFFINITY_IMPACT_2026-06-27.md  CRIMSON_ARMY_FIT.md  DAWNSEEKER_ARMY_FIT_2026-06-25.md  GOLD_STANDARD_ARMY_CANDIDATES_2026-06-27.md  GOLD_STANDARD_ARMY_DEFAULT_2026-06-27.md  HABIT_STRATEGY_2026-06-29.md  HEIRLOOM_CLUSTER_6_IMPACT_2026-06-25.md  HEIRLOOM_PRIORITY_2026-06-25.md  MALACHITE_VHAGAR_RHYSARION.md  MARKET_2026-06-24.md  MARKET_2026-06-25.md  MARKET_2026-06-26.md  OFFICIAL_DRAGON_ROSTER_VALIDATION_2026-07-06.md  OPTIMAL_FIVE_ARMIES_2026-06-24.md  SPEARMEN_POSITION_TESTS_2026-06-28.md  SYRAX_ARMY_FIT_2026-06-26.md  TROOP_AFFINITIES.md  dragon-lineup-analysis.md  weekly-downloads-summary.md
dragons/: .json  antares.json  (+41 more)
(+95 files in other folders)
